chore(test): constrain pytest discovery via pyproject and add uv lockfile (#3)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,3 +54,7 @@ script-files = [
 
 [tool.setuptools.packages.find]
 include = ["iDiffIR*"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
