--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install project and test dependencies
         run: uv sync --extra test
 
+      - name: Compile gate (warnings as errors)
+        run: uv run python -W error::SyntaxWarning -m compileall -f -q iDiffIR scripts tests
+
       - name: Build wheel
         run: uv run python -m pip install build && uv run python -m build
 
