--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,10 @@
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
+[project.urls]
+Homepage = "https://combi.cs.colostate.edu/idiffir"
+Repository = "https://github.com/bio-comp/iDiffIR"
+
 [project]
 name = "iDiffIR"
 version = "0.3.2"
@@ -9,10 +13,8 @@ description = "Identifying differential intron retention from RNA-seq"
 readme = "README"
 requires-python = ">=3.9"
 license = { text = "GNU General Public License" }
-authors = [
-  { name = "Michael Hamilton", email = "mike.hamilton7@gmail.com" },
-]
-urls = { Homepage = "https://combi.cs.colostate.edu/idiffir" }
+authors = [{ name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" }]
+
 classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.9",
@@ -22,21 +24,8 @@ classifiers = [
   "License :: OSI Approved :: GNU General Public License (GPL)",
   "Operating System :: OS Independent",
 ]
-dependencies = [
-  "scipy",
-  "numpy",
-  "matplotlib",
-  "pysam",
-]
+dependencies = ["scipy", "numpy", "matplotlib", "pysam"]
 
-[project.optional-dependencies]
-dev = [
-  "pytest>=8.0",
-  "build>=1.2",
-]
-test = [
-  "pytest>=8.0",
-]
 
 [tool.setuptools]
 include-package-data = true
@@ -58,3 +47,6 @@ include = ["iDiffIR*"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
+
+[dependency-groups]
+dev = ["mypy>=1.19.1", "pytest>=8.4.2", "ruff>=0.15.2", "build>=1.2"]
