packaging: add py.typed marker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ script-files = [
 [tool.setuptools.packages.find]
 include = ["iDiffIR*"]
 
+[tool.setuptools.package-data]
+iDiffIR = ["py.typed"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
