--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
   "License :: OSI Approved :: GNU General Public License (GPL)",
   "Operating System :: OS Independent",
 ]
-dependencies = ["scipy", "numpy", "matplotlib", "pysam"]
+dependencies = ["scipy", "numpy", "matplotlib", "pysam", "gffutils>=0.13"]
 
 
 [tool.setuptools]
@@ -49,6 +49,25 @@ iDiffIR = ["py.typed"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
+
+[tool.ruff]
+target-version = "py310"
+line-length = 100
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP"]
+extend-select = ["ANN", "C90"]
+ignore = [
+  # Keep migration velocity while we incrementally reduce Any-heavy legacy paths.
+  "ANN401",
+]
+
+[tool.ruff.lint.flake8-annotations]
+allow-star-arg-any = true
+suppress-dummy-args = true
+
+[tool.ruff.lint.mccabe]
+max-complexity = 12
 
 [dependency-groups]
 dev = ["mypy>=1.19.1", "pytest>=8.4.2", "ruff>=0.15.2", "build>=1.2"]
