--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project.urls]
 Homepage = "https://combi.cs.colostate.edu/idiffir"
@@ -25,26 +25,24 @@ classifiers = [
 ]
 dependencies = ["scipy", "numpy", "matplotlib", "pysam", "gffutils>=0.13"]
 
+[project.scripts]
+"idiffir.py" = "scripts.idiffir:main"
+"idiffir_plotter.py" = "scripts.idiffir_plotter:main"
+"getDepths.py" = "scripts.getDepths:main"
+"convertSam.py" = "scripts.convertSam:main"
+"simulate_IR.py" = "scripts.simulate_IR:main"
+"make_MISO_IR_GFF.py" = "scripts.make_MISO_IR_GFF:main"
+"make_MISO_AS_GFF.py" = "scripts.make_MISO_AS_GFF:main"
+"make_MISO_SE_GFF.py" = "scripts.make_MISO_SE_GFF:main"
+"get_gene_expression.py" = "scripts.get_gene_expression:main"
+"get_intron_expression.py" = "scripts.get_intron_expression:main"
+"run_miso_ir.py" = "scripts.run_miso_ir:main"
 
-[tool.setuptools]
-include-package-data = true
-script-files = [
-  "scripts/idiffir.py",
-  "scripts/getDepths.py",
-  "scripts/convertSam.py",
-  "scripts/simulate_IR.py",
-  "scripts/make_MISO_IR_GFF.py",
-  "scripts/make_MISO_AS_GFF.py",
-  "scripts/get_gene_expression.py",
-  "scripts/idiffir_plotter.py",
-  "scripts/run_miso_ir.py",
-]
+[tool.hatch.build.targets.wheel]
+packages = ["iDiffIR", "scripts"]
 
-[tool.setuptools.packages.find]
-include = ["iDiffIR*"]
-
-[tool.setuptools.package-data]
-iDiffIR = ["py.typed"]
+[tool.hatch.build.targets.wheel.force-include]
+"iDiffIR/py.typed" = "iDiffIR/py.typed"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
