--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = ["scipy", "numpy", "matplotlib", "pysam", "gffutils>=0.13"]
 "get_gene_expression.py" = "scripts.get_gene_expression:main"
 "get_intron_expression.py" = "scripts.get_intron_expression:main"
 "run_miso_ir.py" = "scripts.run_miso_ir:main"
+"migrate_classifier_archives.py" = "scripts.migrate_classifier_archives:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["iDiffIR", "scripts"]
@@ -68,4 +69,12 @@ suppress-dummy-args = true
 max-complexity = 12
 
 [dependency-groups]
-dev = ["mypy>=1.19.1", "pytest>=8.4.2", "pytest-cov>=7.0.0", "ruff>=0.15.2", "build>=1.2"]
+dev = [
+    "mypy>=1.19.1",
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.15.2",
+    "build>=1.2",
+    "scikit-learn>=1.7.2",
+    "joblib>=1.5.3",
+]
