--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,12 @@ packages = ["iDiffIR", "scripts"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
+markers = [
+  "unit: Fast, isolated unit-level tests.",
+  "integration: Cross-module or IO-involving integration tests.",
+  "smoke: Fast high-level behavior checks for critical paths.",
+  "performance: Performance-sensitive tests intended for local or dedicated runners.",
+]
 
 [tool.ruff]
 target-version = "py310"
