--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,16 @@ classifiers = [
   "License :: OSI Approved :: GNU General Public License (GPL)",
   "Operating System :: OS Independent",
 ]
-dependencies = ["scipy", "numpy", "matplotlib", "pysam", "gffutils>=0.13"]
+dependencies = [
+    "scipy",
+    "numpy",
+    "matplotlib",
+    "pysam",
+    "gffutils>=0.13",
+    "networkx>=3.4.2",
+    "scikit-learn>=1.7.2",
+    "skops>=0.13.0",
+]
 
 [project.scripts]
 "idiffir.py" = "scripts.idiffir:main"
@@ -38,6 +47,7 @@ dependencies = ["scipy", "numpy", "matplotlib", "pysam", "gffutils>=0.13"]
 "get_intron_expression.py" = "scripts.get_intron_expression:main"
 "run_miso_ir.py" = "scripts.run_miso_ir:main"
 "migrate_classifier_archives.py" = "scripts.migrate_classifier_archives:main"
+"train_splice_site_svm.py" = "scripts.train_splice_site_svm:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["iDiffIR", "scripts"]
